codepkg/objects/Bank__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <precision>13</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeClientAccount__c</fullName>
        <label>TypeClientAccount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                    <default>true</default>
                    <label>Debit</label>
                </value>
                <value>
                    <fullName>Сredit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>